plugins {
	id 'org.springframework.boot' version '2.3.0.RELEASE'
	id 'io.spring.dependency-management' version '1.0.9.RELEASE'
	id 'java'
}

group = 'com.formento'
version = '0.0.4-SNAPSHOT'
sourceCompatibility = '14'

repositories {
	mavenLocal()
	mavenCentral()
}

dependencies {
  implementation 'org.springframework.boot:spring-boot-starter-webflux'
  testImplementation('org.springframework.boot:spring-boot-starter-test') {
    exclude group: 'org.junit.vintage', module: 'junit-vintage-engine'
  }
  testImplementation 'io.projectreactor:reactor-test'
}

compileJava {
    options.compilerArgs += ["--enable-preview"]
}

test {
    jvmArgs '--enable-preview'
	useJUnitPlatform()
}
